--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "roamjs-components": "^0.26.11"
+    "roamjs-components": "^0.26.11",
+    "ts-deepmerge": "^1.1.0"
   }
 }
